--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,4 @@
-<div class="container"
-     fxLayout="row"
-     fxLayout.sm="column"
-     fxLayout.xs="column"
-     fxLayoutAlign.gt-md="space-around center"
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-mat="space-around center"
      fxLayoutGap="10px">
 
   <mat-card *ngIf="dish" fxFlex>
@@ -31,6 +27,22 @@
     <mat-card-content>
       <p>
         {{promotion.description}}
+      </p>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card *ngIf="leader" fxFlex>
+    <mat-card-header>
+      <div mat-card-avatar></div>
+      <mat-card-title>
+        <h3>{{leader.name | uppercase}} {{leader.abbr | uppercase}}</h3>
+      </mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+    <mat-card-content>
+      <p>{{leader.designation}}</p>
+      <p>
+        {{leader.description}}
       </p>
     </mat-card-content>
   </mat-card>
