--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,11 +1,11 @@
-        <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
+          <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px" fxLayoutGap.xs="0">
   <div fxFlex="40">
     <div fxFlex *ngIf="dish">
       <md-card>
         <md-card-header>
           <md-card-title>
-            <h3>{{ dish.name | uppercase }}</h3>
+            <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
           </md-card-title>
         </md-card-header>
         <img md-card-image src="{{dish.image}}" alt="{{dish.name}}">
