--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -62,7 +62,8 @@
   </div>
 
   <div fxLayout="column" fxLayoutGap="10px">
-    <mat-list fxFlex>
+    <h2>Corporate Leadership</h2>
+    <mat-list *ngIf="leaders">
       <mat-list-item *ngFor="let leader of leaders">
         <img mat-list-avatar src={{leader.image}} alt={{leader.name}}>
         <h1 mat-line> {{leader.name}} {{leader.abbr}} </h1>
@@ -74,6 +75,9 @@
         </p>
       </mat-list-item>
     </mat-list>
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
   </div>
 
 </div>
