--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,11 +5,11 @@
   <div fxFlex>
     <div>
       <h3>Menu</h3>
-      <hr >
+      <hr>
     </div>
   </div>
 
-  <div fxFlex>
+  <div fxFlex *ngIf="dishes">
     <mat-grid-list cols="2" rowHeigth="200px">
       <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail', dish.id]">
         <img height="200px" src={{dish.image}} alt={{dish.name}}>
@@ -20,6 +20,9 @@
     </mat-grid-list>
   </div>
 
-  
+  <div [hidden]="dishes">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 
- 
+
+
