--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,4 @@
-<div class="container"
-     fxLayout="column"
-     fxLayoutGap="10px">
+<div class="container" fxLayout="column" fxLayoutGap="10px">
 
   <div fxFlex>
     <div>
@@ -15,9 +13,7 @@
       <div fxFlex="50" fxFlexOffset="20px">
         <h4>Our Address</h4>
         <address>
-          121, Clear Water Bay Road<br>
-          Clear Water Bay, Kowloon<br>
-          HONG KONG<br>
+          121, Clear Water Bay Road<br> Clear Water Bay, Kowloon<br> HONG KONG<br>
           <i class="fa fa-phone"></i>: +852 1234 5678<br>
           <i class="fa fa-fax"></i>: +852 8765 4321<br>
           <i class="fa fa-envelope"></i>:
@@ -35,49 +31,67 @@
       </div>
     </div>
   </div>
-</div>
-<div fxFlex fxFlexOffset="20px" class="form-size">
-  <h3>Send us your Feedback</h3>
-  <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
 
-  <form novalidate [formGroup]="feedbackForm" #fform="ngForm" (ngSubmit)="onSubmit()">
-    <p>
-      <mat-form-field class="half-width">
-        <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
-        <mat-error *ngIf="formErrors.firstname">{{formErrors.firstname}}</mat-error>
-      </mat-form-field>
-      <mat-form-field class="half-width">
-        <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
-        <mat-error *ngIf="formErrors.lastname">{{formErrors.lastname}}</mat-error>
-      </mat-form-field>
-    </p>
-    <p>
-      <mat-form-field class="half-width">
-        <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*" required>
-        <mat-error *ngIf="formErrors.telnum">{{formErrors.telnum}}</mat-error>
-      </mat-form-field>
-      <mat-form-field class="half-width">
-        <input matInput formControlName="email" placeholder="Email" type="email" email required>
-        <mat-error *ngIf="formErrors.email">{{formErrors.email}}</mat-error>
-      </mat-form-field>
-    </p>
-    <table class="form-size">
-      <td>
-        <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
-      </td>
-      <td>
-        <mat-select placeholder="How?" formControlName="contacttype">
-          <mat-option *ngFor="let ctype of contactType" [value]="ctype">
-            {{ ctype }}
-          </mat-option>
-        </mat-select>
-      </td>
-    </table>
-    <p>
-      <mat-form-field class="full-width">
-        <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
-      </mat-form-field>
-    </p>
-    <button type="submit" mat-button class="background-primary text-floral-white">Submit</button>
-  </form>
+  <div fxFlex fxFlexOffset="20px" class="form-size">
+    <h3>Send us your Feedback</h3>
+    <p>{{ feedbackForm.value | json }} {{ feedbackForm.status | json }}</p>
+
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="half-width" color="{{(formErrors.firstname) ? 'warn' : 'primary'}}">
+          <input matInput formControlName="firstname" placeholder="First Name" type="text" required>
+          <mat-hint>
+            <span [hidden]="!(formErrors.firstname)">
+              {{formErrors.firstname}}
+            </span>
+          </mat-hint>
+        </mat-form-field>
+        <mat-form-field class="half-width" color="{{(formErrors.lastname) ? 'warn' : 'primary'}}">
+          <input matInput formControlName="lastname" placeholder="Last Name" type="text" required>
+          <mat-hint>
+            <span [hidden]="!(formErrors.lastname)">
+              {{formErrors.lastname}}
+            </span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
+      <p>
+        <mat-form-field class="half-width" color="{{(formErrors.telnum) ? 'warn' : 'primary'}}">
+          <input matInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*" required>
+          <mat-hint>
+            <span [hidden]="!(formErrors.telnum)">
+              {{formErrors.telnum}}
+            </span>
+          </mat-hint>
+        </mat-form-field>
+        <mat-form-field class="half-width" color="{{(formErrors.email) ? 'warn' : 'primary'}}">
+          <input matInput formControlName="email" placeholder="Email" type="email" email required>
+          <mat-hint>
+            <span [hidden]="!(formErrors.email)">
+              {{formErrors.email}}
+            </span>
+          </mat-hint>
+        </mat-form-field>
+      </p>
+      <table class="form-size">
+        <td>
+          <mat-slide-toggle formControlName="agree">May we contact you?</mat-slide-toggle>
+        </td>
+        <td>
+          <mat-select placeholder="How?" formControlName="contacttype">
+            <mat-option *ngFor="let ctype of contactType" [value]="ctype">
+              {{ ctype }}
+            </mat-option>
+          </mat-select>
+        </td>
+      </table>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12></textarea>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="feedbackForm.invalid">Submit</button>
+    </form>
+  </div>
+
 </div>
