--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,16 +1,18 @@
-          <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-mat="space-around center"
-     fxLayoutGap="10px" fxLayoutGap.xs="0">
+<div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-mat="space-around center"
+  fxLayoutGap="10px" fxLayoutGap.xs="0">
+
   <div fxFlex="40">
     <div fxFlex *ngIf="dish">
       <mat-card>
         <mat-card-header>
           <mat-card-title>
-            <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
+            <h3>{{dish.name | uppercase}}</h3>
           </mat-card-title>
         </mat-card-header>
-        <img mat-card-image src="{{dish.image}}" alt="{{dish.name}}">
+        <img mat-card-image src={{dish.image}} alt={{dish.name}}>
         <mat-card-content>
-          <p>{{ dish.description}} </p>
+          <p>{{dish.description}}
+          </p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-button [routerLink]="['/dishdetail', prev]"><span class="fa fa-chevron-left fa-lg"></span></button>
@@ -23,23 +25,72 @@
       </mat-card>
     </div>
   </div>
-  <div fxFlex="40" *ngIf="dish">
-    <h3>Comments</h3>
-    <mat-list>
-      <mat-list-item *ngFor="let comment of dish.comments">
-        <p mat-line>
-          <span>{{comment.comment}}</span>
-        </p>
-        <p mat-line>
-          <span>{{comment.rating}} Stars</span>
-        </p>
-        <p mat-line>
-          <span>-- {{comment.author}} {{ comment.date | date }}</span>
-        </p>
-      </mat-list-item>
-    </mat-list>
-  </div>
+
+
   <div [hidden]="dish">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait</h4>
   </div>
+
+  <div fxFlex="40" fxFlexAlign="start">
+    <div class="container" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutAlign.gt-mat="space-around start"
+      fxLayoutGap="10px" fxLayoutGap.xs="0">
+      <div fxFlex *ngIf="dish">
+        <div>
+          <mat-list fxFlex *ngIf="dish">
+            <h3>Comments</h3>
+            <mat-list-item *ngFor="let comment of dish.comments">
+              <p mat-line>
+                <span> {{comment.comment}} </span>
+              </p>
+              <h4 mat-line> {{comment.rating}} Stars</h4>
+              <p mat-line>-- {{comment.author}} {{comment.date | date:'mediumatate'}}</p>
+            </mat-list-item>
+
+            <!-- List Item for dish feedback preview -->
+            <mat-list-item *ngIf="dishfeedbackform.valid">
+
+              <p mat-line>
+                <span> {{dishfeedbackform.value.comment}} </span>
+              </p>
+              <p mat-line> {{dishfeedbackform.value.rating}} Stars</p>
+              <p mat-line>-- {{dishfeedbackform.value.author}}</p>
+            </mat-list-item>
+            <!-- dish feedback preview ends -->
+
+            
+          </mat-list>
+        </div>
+
+
+        <!-- Dish Feedback form begins -->
+        <form novalidate [formGroup]="dishfeedbackform" (ngSubmit)="onSubmit()">
+          <p>
+            <mat-input-container dividerColor="{{(formErrors.author) ? 'warn' : 'primary'}}">
+              <input matInput formControlName="author" placeholder="Name" type="text" required>
+              <mat-hint>
+                <span [hidden]="!(formErrors.author)">
+                          {{formErrors.author}}</span>
+              </mat-hint>
+            </mat-input-container>
+          </p>
+          <mat-slider flex formControlName="rating" step="1" min="1" max="5" thumbLabel tickInterval="1"></mat-slider>
+          <p>
+            <mat-input-container dividerColor="{{(formErrors.comment) ? 'warn' : 'primary'}}">
+              <textarea matInput formControlName="comment" placeholder="Your Comment" rows=12 required></textarea>
+              <mat-hint>
+                <span [hidden]="!(formErrors.comment)">
+                            {{formErrors.comment}}</span>
+              </mat-hint>
+            </mat-input-container>
+          </p>
+          <button type="submit" mat-button class="background-primary text-floral-white" [disabled]="dishfeedbackform.invalid">Submit</button>
+        </form>
+        <!-- Dish Feedback form ends -->
+
+
+      </div>
+    </div>
+  </div>
+
 </div>
